crates/strider/tests/snapshots/v2__arm_be__calls__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x10140:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "10" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v14" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "10" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "16" -> "10" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "10" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "18" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "10" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1021c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "18" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v22" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v22" [color="#888888", style=dashed];
  "v22" -> "18" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v23" [color="#888888", style=dashed];
  "v23" -> "18" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "18" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x10260:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "18" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "32" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "25" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x102a4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "32" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v36" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v36" [color="#888888", style=dashed];
  "v36" -> "32" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v37" [color="#888888", style=dashed];
  "v37" -> "32" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "38" -> "32" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "39" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "32" -> "39" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x102c4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "39" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x101e0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" -> "39" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v44" [color="#888888", style=dashed];
  "v44" -> "39" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "45" -> "39" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "46" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "39" -> "46" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v49" [color="#888888", style=dashed];
  "v49" -> "46" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v50" [color="#888888", style=dashed];
  "v50" -> "46" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v51" [color="#888888", style=dashed];
  "v51" -> "46" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "48" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "39" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x1fffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "39" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v44" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x1fffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "32" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v36" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "63" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v64" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "18" -> "v64" [color="#888888", style=dashed];
  "v64" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "18" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "18" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v22" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "10" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "68" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v14" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "68" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "69" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "1" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "73" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "76" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "78" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
